Do not allow or suggest .kra files when converting to file layers

This should also fix the issue where the transform masks inside
the embedded file are broken.

BUG:399940